[gd_scene load_steps=3 format=3 uid="uid://d16yn2xp2wxmf"]

[ext_resource type="Script" path="res://hud/hud.gd" id="1_pdlvb"]
[ext_resource type="LabelSettings" uid="uid://wkwanhiu4vp7" path="res://fonts/HUD_32_white.tres" id="1_xanbv"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pdlvb")

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="HorizontalContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="LivesLabel" type="Label" parent="MainContainer/HorizontalContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Lives: 3"
label_settings = ExtResource("1_xanbv")

[node name="ScoreLabel" type="Label" parent="MainContainer/HorizontalContainer"]
layout_mode = 2
text = "000"
label_settings = ExtResource("1_xanbv")
